fix fab z-index issue

--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -9,6 +9,7 @@ $backdropHeight: 300px;
   position: fixed;
   right: 32px;
   bottom: 32px;
+  z-index: 999;
 }
 
 .application-navbar {
